<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_scrollview_in_detail"
    tools:context=".ProductInDetail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/lin_detail">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray"
            android:padding="@dimen/lin2_detail"
            >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/id_img_prod_in_detail"
            android:contentDescription="@string/productimage_cDes_detail"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_as_fav_btn_detail"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_detail"
                android:gravity="center"
                android:id="@+id/id_fav_btn_in_detail"
                android:textColor="@color/black" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:id="@+id/id__prod_name_in_detail"
            android:textSize="@dimen/name_tv_detail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_tv_detail"
            android:textStyle="bold"
            android:textSize="@dimen/desc_tv_detail"
            android:layout_marginTop="@dimen/desc_mTop_detail"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/descData_tv_detail"
            android:padding="@dimen/pad_tv_detail"
            android:id="@+id/id__description_in_detail"/>
    </LinearLayout>
</ScrollView>