<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal">

         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             app:cardCornerRadius="110dp"
             android:layout_weight="0.50"
             app:cardBackgroundColor="@color/card_color"
             android:elevation="1dp">
        <TextView
            android:id="@+id/id_mabelline_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:onClick="brandSpecific"
            android:padding="16dp"
            android:text="@string/maybelline_main"
            android:textColor="@color/black"
            android:textSize="25sp" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="110dp"
            android:layout_weight="0.50"
            app:cardBackgroundColor="@color/card_color"
            android:elevation="1dp">

        <TextView
            android:id="@+id/id_revlon_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:onClick="brandSpecific"
            android:padding="16dp"
            android:text="@string/revlon_main"
            android:textColor="@color/black"
            android:textSize="25sp" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="110dp"
            android:layout_weight="0.50"
            app:cardBackgroundColor="@color/card_color"
            android:elevation="1dp">
        <TextView
            android:id="@+id/id_covergirl_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:onClick="brandSpecific"
            android:padding="16dp"
            android:text="@string/covergirl_main"
            android:textColor="@color/black"
            android:textSize="25sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="110dp"
            android:layout_weight="0.50"
            app:cardBackgroundColor="@color/card_color"
            android:elevation="1dp">
        <TextView
            android:id="@+id/id_milani_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:onClick="brandSpecific"
            android:padding="16dp"
            android:text="@string/milani_main"
            android:textColor="@color/black"
            android:textSize="25sp" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/id_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</LinearLayout><!--
</ScrollView>-->
